--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "bower": "^1.7.7",
+    "gulp": "^3.9.1",
     "systemjs": "^0.19.24",
+    "systemjs-builder": "^0.15.15",
     "systemjs-plugin-babel": "0.0.8"
   },
   "dependencies": {
